--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+#wrapper {
+    background-image: url(https:png.pngtree.com/background/20211215/original/pngtree-playstation-neon-sign-pattern-background-picture-image_1470915.jpg) ;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
 .container {
     height: 100vh;
     display: flex;
