--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
-#wrapper {
-    background-image: url(https:png.pngtree.com/background/20211215/original/pngtree-playstation-neon-sign-pattern-background-picture-image_1470915.jpg) ;
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
-}
+
 .container {
+    background-image: url(https:png.pngtree.com/background/20211215/original/pngtree-playstation-neon-sign-pattern-background-picture-image_1470915.jpg);
+    background-size: cover;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -19,7 +16,7 @@
 .item {
     float: left;
     width: 700px;
-    height: 300px;
+    height: 316px;
     position: relative;
 }
 
@@ -40,13 +37,11 @@
 .thumbs {
     float: left;
     height: 300px;
-    background: #000;
     position: relative;
 }
 
 .thumb {
     height: calc((300px) / 5);
-    opacity: 0.5;
 }
 
 .thumb img {
@@ -54,8 +49,11 @@
     height: 100%;
     object-fit: cover;
 }
-
-.thumb.active {
+.unactive{
+    background: #000;
+    filter: opacity(0.5);
+}
+.active {
     border: 2px solid #ccc;
     opacity: 1;
 }
